# SceneIO

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: core_architecture.md  coverage_roadmap.md  format_coverage.md  formats_survey.md  io_implementation_plan.md
src/: sceneio_core.cpp
src/cpp/: colmap.cpp  common.hpp  gaussian.hpp  module.cpp  pfm.cpp  ply_gaussian.cpp  spz.cpp
src/cpp/codecs/: bundler.cpp  colmap.cpp  colmap_txt.cpp  flo.cpp  netpbm.cpp  npy_npz.cpp  nvm.cpp  openmvg.cpp  pfm.cpp  ply_gaussian.cpp  pose_text.cpp  spz.cpp  transforms_json.cpp  xyz.cpp
src/cpp/io/: common.hpp  gzip.hpp
src/cpp/records/: depth_map.cpp  depth_map.hpp  gaussian_cloud.cpp  gaussian_cloud.hpp  image.cpp  image.hpp  point_cloud.cpp  point_cloud.hpp  posed_view_set.cpp  posed_view_set.hpp  reconstruction.cpp  reconstruction.hpp  tensor_dict.cpp  tensor_dict.hpp
src/sceneapi_io/: __init__.py  blobstore.py  errors.py  mapping_input.py  points_binary.py
src/sceneapi_io/data/: __init__.py  _validation.py  calibration.py  dense.py  features.py  pointcloud.py  priors.py  transforms.py  views.py
src/sceneapi_io/formats/: __init__.py  datatypes.py  registry.py
src/sceneapi_io/mapping/: __init__.py
src/sceneapi_io/matching/: __init__.py
src/sceneapi_io/testing/: __init__.py
src/sceneio/: __init__.py  blobstore.py  colmap_db.py  errors.py  imagesource.py  mapping_input.py
src/sceneio/data/: __init__.py  _validation.py  calibration.py  dense.py  features.py  pointcloud.py  priors.py  transforms.py  views.py
src/sceneio/formats/: __init__.py  datatypes.py  registry.py
src/sceneio/io/: __init__.py  registry.py
src/sceneio/mapping/: __init__.py
src/sceneio/matching/: __init__.py
src/sceneio/testing/: __init__.py  parity.py
tests/: test_colmap_db_contract.py  test_conformance_kits.py  test_contract_surface.py  test_core_colmap.py  test_core_pfm.py  test_core_ply.py  test_core_spz.py  test_data_calibration.py  test_data_dense.py  test_data_features.py  test_data_pointcloud_priors.py  test_data_transforms.py  test_data_views.py  test_formats_datatypes.py  test_formats_registry.py  test_import.py  test_import_guards.py  test_io_api.py  test_mapping_contracts.py  test_mapping_input.py  test_matching_contracts.py  test_points_binary.py
tests/codecs/: test_bundler.py  test_colmap_txt.py  test_flo.py  test_netpbm.py  test_npy_npz.py  test_nvm.py  test_openmvg.py  test_pfm.py  test_ply.py  test_pose_text.py  test_spz.py  test_transforms_json.py  test_xyz.py
tests/records/: test_depth_map.py  test_image.py  test_point_cloud.py  test_tensor_dict.py
