[project]
name = "sceneio"
version = "0.2.0"
description = "The contract plane for SceneAPI — numpy-native data contracts, mapping/matching procedure contracts, wire codecs, and format registries."
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.12,<3.13"
# Leaf package: imports nothing from the SceneAPI family (guard-tested).
# numpy is a hard dependency — the data/procedure contracts are
# numpy-native (np.ndarray in the contract surface).
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4"]
build-backend = "scikit_build_core.build"

# Compiled-only sceneio (decision D1, docs/io_implementation_plan.md): the
# nanobind `sceneio._core` extension is built by CMake and is mandatory.
[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/sceneio"]
# abi3 wheel from CPython 3.12 (matches nanobind STABLE_ABI in CMakeLists).
wheel.py-api = "cp312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests favor terse fixtures: one-shot file reads, compound asserts, and
# throwaway unpacking are fine here.
"tests/**" = ["SIM115", "PT018", "RUF059"]
