[project]
name = "sceneio"
version = "0.2.0"
description = "The contract plane for SceneAPI — numpy-native data contracts, mapping/matching procedure contracts, wire codecs, and format registries."
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.12,<3.13"
# Leaf package: imports nothing from the SceneAPI family (guard-tested).
# numpy is a hard dependency — the data/procedure contracts are
# numpy-native (np.ndarray in the contract surface).
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]
# Codec parity oracles — kept out of runtime and `dev` so `import sceneio` stays
# a numpy-only leaf. gsply (3DGS PLY + SPZ, incl. its C++ backend for v4),
# pycolmap (COLMAP). numpy is capped <2.5 because gsply's numba needs NumPy
# <=2.4, and pinned >=2.0 to keep the NEP-50 float32 semantics the SPZ encode
# parity relies on. (torch is intentionally omitted; its interop tests skip.)
test = [
    "pytest>=8.3",
    "numpy>=2.0,<2.5",
    "gsply>=0.4",
    "pycolmap>=4.1",
]

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4"]
build-backend = "scikit_build_core.build"

# Compiled-only sceneio (decision D1, docs/io_implementation_plan.md): the
# nanobind `sceneio._core` extension is built by CMake and is mandatory.
[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/sceneio"]
# abi3 wheel from CPython 3.12 (matches nanobind STABLE_ABI in CMakeLists).
wheel.py-api = "cp312"
# zstd is statically linked into _core; its FetchContent `install()` rules
# otherwise leak dev artifacts (headers, the static lib, CMake configs) into the
# wheel root. The runtime wheel is just the `sceneio` package + `_core`.
wheel.exclude = ["include/**", "lib/**", "share/**", "bin/**"]

# Cross-platform wheel builds for the compiled core (Thread 2A). One abi3 wheel
# per platform; `requires-python` currently caps at <3.13, so only cp312 is
# built — relaxing that cap ships the same abi3 wheel to 3.13+ with no rebuild.
# Deps (miniz/nlohmann-json/zstd) are fetched by CMake FetchContent at build
# time, so each wheel job needs network access (a candidate to vendor later).
[tool.cibuildwheel]
build = "cp312-*"
skip = "*-musllinux* *_i686 *-win32"
test-requires = ["numpy"]
# Cross-platform smoke: import the package + round-trip the reference codec
# (numpy-only; no quotes in the -c body so it is shell-safe on cmd and sh).
test-command = 'python -c "import numpy as np, sceneio; from sceneio import _core; a = np.arange(12, dtype=np.float32).reshape(3, 4); assert np.array_equal(_core.read_pfm(_core.write_pfm(a)), a); print(_core.__phase__)"'

[tool.cibuildwheel.linux]
manylinux-x86-64-image = "manylinux2014"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
# the npz duplicate-member test intentionally writes a duplicate zip entry
filterwarnings = ["ignore:Duplicate name:UserWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests favor terse fixtures: one-shot file reads, compound asserts, and
# throwaway unpacking are fine here.
"tests/**" = ["SIM115", "PT018", "PT011", "RUF059"]
